# fire-debrisflow-ml

./: README.md  SOIL_DATA_PUBLIC_COLLECTION.md  environment.ci.yml  environment.yml  pyproject.toml  requirements.txt  usda_solus.md
.github/workflows/: soil_cli.yml
config/: base.yaml  interpret.yaml  ml_cnn.yaml  ml_rf.yaml  ml_unet.yaml
experiments/interpret/manual_run/: pdp_burn__severity.csv  pdp_cation__exchange_capacity.csv  pdp_clay__total.csv  pdp_dry__bulk_density.csv  pdp_field__capacity.csv  pdp_landcover.csv  pdp_meta.json  pdp_pH.csv  pdp_porosity.csv  pdp_sand__total.csv  pdp_saturated__water_content.csv  pdp_silt__total.csv  pdp_soil__density.csv  pdp_soil__internal_friction_angle.csv  pdp_soil__maximum_total_cohesion.csv  pdp_soil__minimum_total_cohesion.csv  pdp_soil__texture.csv  (+7 more)
notebook/: DataPipeline_Hunter.ipynb  Multi_model_Probability.ipynb  eda.ipynb  test.ipynb  test1.ipynb  test1_copy.ipynb
scripts/: evaluate_model.py  feature_importance.py  partial_dependence.py  predict_cnn.py  predict_model.py  predict_unet.py  smoke_test_soil_cli.py  soil_fetch.py  soil_harmonize.py  soil_run.py  train_cnn.py  train_model.py  train_unet.py
src/: dem.py  downloads.py  export_ascii_to_tif.py  pipeline.py  reproject_and_resample.py  run_pipeline.py  soil_features.py  vegetation_features.py
src/deep/: cnn.py  data.py  predict.py  train.py  unet.py
src/ml/: dataset.py  evaluate.py  interpret.py  io.py  predict.py  split.py  train.py
src/soil_data/: __init__.py  cli_fetch.py  cli_harmonize.py  cli_run.py  core.py
tests/: test_soil_data_core.py
(+60 files in other folders)
